--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "test-task-vashchayeva-m",
   "version": "0.0.0",
+  "homepage": "https://maryanzh.github.io/DocuSketch-test/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng deploy --baseDir='https://maryanzh.github.io/DocuSketch-test/'"
   },
   "private": true,
   "dependencies": {
@@ -14,11 +16,14 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@azure/ng-deploy": "^0.2.3",
     "rxjs": "~7.8.0",
+    "surge": "^0.23.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -27,6 +32,7 @@
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^1.0.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
